@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-25T16:23:17Z",
-  "count_outdated" : 2613,
-  "uniques_outdated" : 704,
-  "count" : 2651,
+  "timestamp" : "2022-11-26T01:21:21Z",
+  "count_outdated" : 2616,
+  "uniques_outdated" : 705,
+  "count" : 2652,
   "uniques" : 723,
   "clones" : [
-    {
-      "timestamp": "2022-11-11T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-11-13T00:00:00Z",
       "count": 5,
@@ -98,8 +91,8 @@
     },
     {
       "timestamp": "2022-11-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
