@@ -1,12 +1,7 @@
 {
-  "count": 38,
-  "uniques": 7,
+  "count": 36,
+  "uniques": 6,
   "clones": [
-    {
-      "timestamp": "2022-11-11T00:00:00Z",
-      "count": 3,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-11-13T00:00:00Z",
       "count": 5,
@@ -69,7 +64,7 @@
     },
     {
       "timestamp": "2022-11-25T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
