@@ -1,3 +1,11 @@
+2022-11-26T01:21:21Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3551622557 # 1062
+* notice: last 14d: unq all: 6 36
+* notice: prev accum: outdated-unq outdated-all / unq all: 704 2613 / 723 2651
+* notice: next accum: outdated-unq outdated-all / unq all: 705 2616 / 723 2652
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-11-11] / [2022-11-25]
+
 2022-11-25T16:23:17Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3549426495 # 1061
 * notice: last 14d: unq all: 7 38
